--- a/articles/baremetal-infrastructure/toc.yml
+++ b/articles/baremetal-infrastructure/toc.yml
@@ -69,6 +69,16 @@
               href: ../virtual-machines/workloads/sap/troubleshooting-monitoring.md?context=%2fazure%2fbaremetal-infrastructure%2fworkloads%2fsap%2fcontext%2fcontext
             - name: Überwachung und Problembehandlung auf HANA-Seite
               href: ../virtual-machines/workloads/sap/hana-monitor-troubleshoot.md?context=%2fazure%2fbaremetal-infrastructure%2fworkloads%2fsap%2fcontext%2fcontext
+            - name: Übersicht über Azure Monitor für SAP-Lösungen
+              href: ../virtual-machines/workloads/sap/azure-monitor-overview.md?context=%2fazure%2fbaremetal-infrastructure%2fworkloads%2fsap%2fcontext%2fcontext
+            - name: Anbieter von Azure Monitor für SAP-Lösungen
+              href: ../virtual-machines/workloads/sap/azure-monitor-providers.md?context=%2fazure%2fbaremetal-infrastructure%2fworkloads%2fsap%2fcontext%2fcontext
+            - name: 'Bereitstellen von Azure Monitor für SAP-Lösungen: Azure-Portal'
+              href: ../virtual-machines/workloads/sap/azure-monitor-sap-quickstart.md?context=%2fazure%2fbaremetal-infrastructure%2fworkloads%2fsap%2fcontext%2fcontext
+            - name: 'Bereitstellen von Azure Monitor für SAP-Lösungen: Azure PowerShell'
+              href: ../virtual-machines/workloads/sap/azure-monitor-sap-quickstart-powershell.md?context=%2fazure%2fbaremetal-infrastructure%2fworkloads%2fsap%2fcontext%2fcontext
+            - name: Häufig gestellte Fragen zu Azure Monitor für SAP-Lösungen
+              href: ../virtual-machines/workloads/sap/azure-monitor-faq.yml?context=%2fazure%2fbaremetal-infrastructure%2fworkloads%2fsap%2fcontext%2fcontext
         - name: Anleitung
           items:
             - name: HA-Einrichtung mit STONITH
