--- a/articles/virtual-machines/windows/sqlclassic/TOC.yml
+++ b/articles/virtual-machines/windows/sqlclassic/TOC.yml
@@ -5,7 +5,7 @@
     - name: Preise
       href: 'https://azure.microsoft.com/pricing/details/virtual-machines/windows/'
     - name: Häufig gestellte Fragen
-      href: /azure/azure-sql/virtual-machines/windows/frequently-asked-questions-faq?toc=/azure/virtual-machines/windows/sqlclassic/toc.json
+      href: ../../../azure-sql/virtual-machines/windows/frequently-asked-questions-faq.yml?toc=%2fazure%2fvirtual-machines%2fwindows%2fsqlclassic%2ftoc.json
 - name: Erste Schritte
   items:
     - name: Bereitstellen eines virtuellen Computers über das Azure-Portal
