--- a/articles/cognitive-services/Computer-vision/breadcrumb/toc.yml
+++ b/articles/cognitive-services/Computer-vision/breadcrumb/toc.yml
@@ -1,15 +1,4 @@
 - name: Azure
-  tocHref: /legal/
-  topicHref: /azure/index
-  items:
-    - name: Maschinelles Sehen
-      tocHref: /legal/computer-vision
-      topicHref: /azure/cognitive-services/Computer-vision/index
-      items:
-        - name: Räumliche Analyse für maschinelles Sehen
-          tocHref: /legal/cognitive-services/computer-vision/
-          topicHref: /azure/cognitive-services/Computer-vision/index
-- name: Azure
   tocHref: /azure/
   topicHref: /azure/index
   items:
@@ -20,3 +9,14 @@
         - name: Maschinelles Sehen
           tocHref: /azure/cognitive-services/
           topicHref: /azure/cognitive-services/computer-vision/index
+- name: Azure
+  tocHref: /legal/
+  topicHref: /azure/index
+  items:
+    - name: Cognitive Services
+      tocHref: /legal/cognitive-services/computer-vision
+      topicHref: /azure/cognitive-services/index
+      items:
+        - name: Maschinelles Sehen
+          tocHref: /legal/cognitive-services/computer-vision
+          topicHref: /azure/cognitive-services/Computer-vision/index
